# pydae

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS  CLAUDE.md  CONTRIBUTING.rst  COPYING  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  README.md  agc_2gen_data.json  daesolver_ini.c  daesolver_ini.h  environment.yml  ieee39_new.hjson  ieee39_xy_0.json  index.ipynb  js_jupy1.ipynb  k13p2_slack_xy_0.json  k13p2_sym_data.json  k13p2_xy_0.json  notes.txt  pendulum.py  pendulum_data.json  pyproject.toml  pytest.ini  requirements.txt  smib_bess_pq2_cffi.c  smib_vsc_l_pq.py  smib_vsc_l_pq_cffi.c  smib_vsc_l_vsg_ll.py  smib_vsc_l_vsg_ll_cffi.c  source_pendulum_cffi.c  temp.py  temp_ini_cffi.c  temp_m2_data.json  temp_m4_data.json  temp_m4_xy_0.json  (+10 more)
.claude/: settings.json
Release/: pendulum_cffi.cp39-win_amd64.exp  pendulum_cffi.cp39-win_amd64.lib
dev/: dev.ipynb  ini_models.m  models.slx  models.slxc
docs/: README.md  requirements.txt
examples/: README.md  Untitled.ipynb  k13p2_ini.py  milano2ord.hjson  milano2ord_pm.py  milano4ord.hjson  milano4ord.py  milano4ord_build.py  milano4ord_damp_report.md  milano4ord_example.py  milano4ord_fault_example.py  milano4ord_ini.ipynb  milano4ord_saturation.py  milano4ord_ssa_ex_damp_report.md  milano4ord_ssa_example.py  pendulum.py  pendulum_data.json  smib_k13p2_3ord.hjson  smib_k13p2_3ord_xy_0.json  smib_k13p2_4ord.hjson  smib_k13p2_6ord.hjson  smib_k13p2_6ord_xy_0.json  xy_0.json
tests/: conftest.py  dae1.py  dae1_cffi.c  dae_cffi.c  dynamic_module.py  pendulum.py  smib_expected.py  test_build_cffi.py  test_dae.py  test_dae1.py  test_examples_smoke.py  (+3 more)
(+1836 files in other folders)
