[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pydae"
author = "Juan Manuel Mauricio"
author-email = "jmmauricio6@gmail.com"
home-page = "https://personal.us.es/jmmauricio/"
classifiers = ["License :: OSI Approved :: MIT License"]

